--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,13 +30,8 @@ futures-channel-preview = { version = "0.2", optional = true }
 futures-util-preview = { version = "0.2", optional = true }
 futures-stable-preview = { version = "0.2", optional = true }
 
-[dependencies.glib-sys]
-version = "0.6.0"
-git = "https://github.com/gtk-rs/sys"
-
-[dependencies.gobject-sys]
-version = "0.6.0"
-git = "https://github.com/gtk-rs/sys"
+glib-sys = { git = "https://github.com/gtk-rs/sys" }
+gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 
 [dev-dependencies]
 tempdir = "0.3"
