sys: remove versions from internal and git dependencies

--- a/gdk-pixbuf-sys/Cargo.toml
+++ b/gdk-pixbuf-sys/Cargo.toml
@@ -4,17 +4,9 @@ pkg-config = "0.3.7"
 [dependencies]
 libc = "0.2"
 
-[dependencies.gio-sys]
-path = "../gio-sys"
-version = "0.6.0"
-
-[dependencies.glib-sys]
-path = "../glib-sys"
-version = "0.6.0"
-
-[dependencies.gobject-sys]
-path = "../gobject-sys"
-version = "0.6.0"
+gio-sys = { path = "../gio-sys" }
+glib-sys = { path = "../glib-sys" }
+gobject-sys = { path = "../gobject-sys" }
 
 [dev-dependencies]
 shell-words = "0.1.0"
