--- a/gobject-sys/Cargo.toml
+++ b/gobject-sys/Cargo.toml
@@ -3,10 +3,7 @@ pkg-config = "0.3.7"
 
 [dependencies]
 libc = "0.2"
-
-[dependencies.glib-sys]
-path = "../glib-sys"
-version = "0.6.0"
+glib-sys = { path = "../glib-sys" }
 
 [dev-dependencies]
 shell-words = "0.1.0"
