--- a/gtk-sys/Cargo.toml
+++ b/gtk-sys/Cargo.toml
@@ -4,37 +4,14 @@ pkg-config = "0.3.7"
 [dependencies]
 libc = "0.2"
 
-[dependencies.atk-sys]
-path = "../atk-sys"
-version = "0.6.0"
-
-[dependencies.cairo-sys-rs]
-git = "https://github.com/gtk-rs/cairo"
-version = "0.6.0"
-
-[dependencies.gdk-pixbuf-sys]
-path = "../gdk-pixbuf-sys"
-version = "0.6.0"
-
-[dependencies.gdk-sys]
-path = "../gdk-sys"
-version = "0.6.0"
-
-[dependencies.gio-sys]
-path = "../gio-sys"
-version = "0.6.0"
-
-[dependencies.glib-sys]
-path = "../glib-sys"
-version = "0.6.0"
-
-[dependencies.gobject-sys]
-path = "../gobject-sys"
-version = "0.6.0"
-
-[dependencies.pango-sys]
-path = "../pango-sys"
-version = "0.6.0"
+atk-sys = { path = "../atk-sys" }
+cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
+gdk-pixbuf-sys = { path = "../gdk-pixbuf-sys" }
+gdk-sys = { path = "../gdk-sys" }
+gio-sys = { path = "../gio-sys" }
+glib-sys = { path = "../glib-sys" }
+gobject-sys = { path = "../gobject-sys" }
+pango-sys = { path = "../pango-sys" }
 
 [dev-dependencies]
 shell-words = "0.1.0"
