--- a/gdk-sys/Cargo.toml
+++ b/gdk-sys/Cargo.toml
@@ -4,29 +4,12 @@ pkg-config = "0.3.7"
 [dependencies]
 libc = "0.2"
 
-[dependencies.cairo-sys-rs]
-git = "https://github.com/gtk-rs/cairo"
-version = "0.6.0"
-
-[dependencies.gdk-pixbuf-sys]
-path = "../gdk-pixbuf-sys"
-version = "0.6.0"
-
-[dependencies.gio-sys]
-path = "../gio-sys"
-version = "0.6.0"
-
-[dependencies.glib-sys]
-path = "../glib-sys"
-version = "0.6.0"
-
-[dependencies.gobject-sys]
-path = "../gobject-sys"
-version = "0.6.0"
-
-[dependencies.pango-sys]
-path = "../pango-sys"
-version = "0.6.0"
+cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
+gdk-pixbuf-sys = { path = "../gdk-pixbuf-sys" }
+gio-sys = { path = "../gio-sys" }
+glib-sys = { path = "../glib-sys" }
+gobject-sys = { path = "../gobject-sys" }
+pango-sys = { path = "../pango-sys" }
 
 [dev-dependencies]
 shell-words = "0.1.0"
