--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,3 +57,6 @@ gio-sys = { git = "https://github.com/gtk-rs/sys" }
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 glib = { git = "https://github.com/gtk-rs/glib" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
+
+[dev-dependencies]
+gir-format-check = "^0.1"
