--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ authors = ["The Gtk-rs Project Developers"]
 chrono = "0.4"
 url = "1.4"
 futures-preview = { version = "0.2", optional = true }
-futures-macro-async-preview = { version = "0.2", optional = true }
-futures-macro-await-preview = { version = "0.2", optional = true }
 
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
@@ -50,7 +48,7 @@ gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
 gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
 gtk_3_22_30 = ["gtk_3_22", "gtk/v3_22_30"] #for CI tools
 futures-stable = ["futures-preview", "glib/futures", "gio/futures"]
-futures-nightly = ["futures-stable", "glib/futures-nightly", "futures-preview/nightly", "futures-macro-async-preview", "futures-macro-async-preview/nightly", "futures-macro-await-preview"]
+futures-nightly = ["futures-stable", "glib/futures-nightly", "futures-preview/nightly"]
 
 [[bin]]
 name = "basic"
