--- a/Gir_GObject.toml
+++ b/Gir_GObject.toml
@@ -9,7 +9,6 @@ work_mode = "normal"
 single_version_file = true
 
 generate = [
-    "GObject.Binding",
     "GObject.BindingFlags",
     "GObject.ParamFlags",
 ]
@@ -21,6 +20,11 @@ manual = [
     "GObject.Object",
     "GObject.Value",
 ]
+
+[[object]]
+name = "GObject.Binding"
+status = "generate"
+trait = false
 
 [[object]]
 name = "GObject.*"
