gdk: Add missing parent

--- a/Gir.toml
+++ b/Gir.toml
@@ -89,6 +89,7 @@ manual = [
     "Gdk.Rectangle",
     "Gdk.RGBA",
     "GdkPixbuf.Pixbuf",
+    "Gio.AppLaunchContext",
     "Gio.Icon",
     "GLib.Error",
     "GObject.Value",
