--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ bitflags = "1.0"
 
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 gdk-sys = { git = "https://github.com/gtk-rs/sys" }
+gio-sys = { git = "https://github.com/gtk-rs/sys" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
 cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
