gdk-pixbuf: Add missing parents

--- a/Gir.toml
+++ b/Gir.toml
@@ -22,7 +22,9 @@ manual = [
     "GdkPixbuf.PixbufAnimationIter",
     "Gio.AsyncReadyCallback",
     "Gio.Cancellable",
+    "Gio.Icon",
     "Gio.InputStream",
+    "Gio.LoadableIcon",
     "Gio.OutputStream",
     "GLib.Bytes",
     "GLib.Error",
