gdk: generate more things

--- a/Gir.toml
+++ b/Gir.toml
@@ -42,6 +42,7 @@ generate = [
     "Gdk.NotifyType",
     "Gdk.OwnerChange",
     "Gdk.PropertyState",
+    "Gdk.PropMode",
     "Gdk.ScrollDirection",
     "Gdk.SeatCapabilities",
     "Gdk.SettingAction",
@@ -67,6 +68,7 @@ manual = [
     "cairo.Surface",
     "Gdk.Atom",
     "Gdk.Event",
+    "Gdk.EventAny",
     "Gdk.EventButton",
     "Gdk.EventConfigure",
     "Gdk.EventCrossing",
@@ -77,12 +79,17 @@ manual = [
     "Gdk.EventKey",
     "Gdk.EventMotion",
     "Gdk.EventOwnerChange",
+    "Gdk.EventPadAxis",
+    "Gdk.EventPadButton",
+    "Gdk.EventPadGroupMode",
     "Gdk.EventProperty",
     "Gdk.EventProximity",
     "Gdk.EventScroll",
     "Gdk.EventSelection",
     "Gdk.EventSetting",
     "Gdk.EventTouch",
+    "Gdk.EventTouchpadPinch",
+    "Gdk.EventTouchpadSwipe",
     "Gdk.EventVisibility",
     "Gdk.EventWindowState",
     "Gdk.Geometry",
