--- a/cairo-sys-rs/Cargo.toml
+++ b/cairo-sys-rs/Cargo.toml
@@ -23,11 +23,24 @@ xcb = []
 use_glib = ["glib-sys", "gobject-sys", "glib"]
 
 [dependencies]
-x11 = { version = "2.16", features = ["xlib"], optional = true }
 libc = "0.2"
-glib-sys = { git = "https://github.com/gtk-rs/sys", optional = true }
-gobject-sys = { git = "https://github.com/gtk-rs/sys", optional = true }
-glib = { git = "https://github.com/gtk-rs/glib", optional = true }
+
+[dependencies.glib]
+optional = true
+git = "https://github.com/gtk-rs/glib"
+
+[dependencies.glib-sys]
+optional = true
+git = "https://github.com/gtk-rs/sys"
+
+[dependencies.gobject-sys]
+optional = true
+git = "https://github.com/gtk-rs/sys"
+
+[dependencies.x11]
+optional = true
+version = "2.16"
+features = ["xlib"]
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.2", features = ["windef"] }
