--- a/gdk-pixbuf-sys/Cargo.toml
+++ b/gdk-pixbuf-sys/Cargo.toml
@@ -4,9 +4,14 @@ pkg-config = "0.3.7"
 [dependencies]
 libc = "0.2"
 
-gio-sys = { path = "../gio-sys" }
-glib-sys = { path = "../glib-sys" }
-gobject-sys = { path = "../gobject-sys" }
+[dependencies.gio-sys]
+path = "../gio-sys"
+
+[dependencies.glib-sys]
+path = "../glib-sys"
+
+[dependencies.gobject-sys]
+path = "../gobject-sys"
 
 [dev-dependencies]
 shell-words = "0.1.0"
