--- a/gobject-sys/Cargo.toml
+++ b/gobject-sys/Cargo.toml
@@ -3,7 +3,9 @@ pkg-config = "0.3.7"
 
 [dependencies]
 libc = "0.2"
-glib-sys = { path = "../glib-sys" }
+
+[dependencies.glib-sys]
+path = "../glib-sys"
 
 [dev-dependencies]
 shell-words = "0.1.0"
