--- a/gtk-sys/Cargo.toml
+++ b/gtk-sys/Cargo.toml
@@ -4,14 +4,29 @@ pkg-config = "0.3.7"
 [dependencies]
 libc = "0.2"
 
-atk-sys = { path = "../atk-sys" }
-cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
-gdk-pixbuf-sys = { path = "../gdk-pixbuf-sys" }
-gdk-sys = { path = "../gdk-sys" }
-gio-sys = { path = "../gio-sys" }
-glib-sys = { path = "../glib-sys" }
-gobject-sys = { path = "../gobject-sys" }
-pango-sys = { path = "../pango-sys" }
+[dependencies.atk-sys]
+path = "../atk-sys"
+
+[dependencies.cairo-sys-rs]
+git = "https://github.com/gtk-rs/cairo"
+
+[dependencies.gdk-pixbuf-sys]
+path = "../gdk-pixbuf-sys"
+
+[dependencies.gdk-sys]
+path = "../gdk-sys"
+
+[dependencies.gio-sys]
+path = "../gio-sys"
+
+[dependencies.glib-sys]
+path = "../glib-sys"
+
+[dependencies.gobject-sys]
+path = "../gobject-sys"
+
+[dependencies.pango-sys]
+path = "../pango-sys"
 
 [dev-dependencies]
 shell-words = "0.1.0"
