gio: Fix OutputStream::write_all()
It can return an error *and* can have bytes written out. We have to
return the written bytes in any case, and did so already for the async
variants and InputStream::read_all().

Fixes https://github.com/gtk-rs/gio/issues/149

--- a/Gir.toml
+++ b/Gir.toml
@@ -490,6 +490,10 @@ status = "generate"
     name = "write_all_async"
     #AsRef<u8>
     ignore = true
+    [[object.function]]
+    name = "write_all"
+    # special return value
+    ignore = true
 
 [[object]]
 name = "Gio.PollableInputStream"
