gio: Add RemoteActionGroup and PropertyAction bindings

--- a/Gir.toml
+++ b/Gir.toml
@@ -65,8 +65,10 @@ generate = [
     "Gio.OutputStreamSpliceFlags",
     "Gio.PasswordSave",
     "Gio.Permission",
+    "Gio.PropertyAction",
     "Gio.Proxy",
     "Gio.ProxyResolver",
+    "Gio.RemoteActionGroup",
     "Gio.Resolver",
     "Gio.ResolverRecordType",
     "Gio.ResourceError",
