gdk: FrameTimings: use an `Option` when returning presentation time
`get_presentation_time` and `get_predicted_presentation_time` can both
return `0` when the returned value is not available. In Rust, using an
`Option` and returning `None` would make it clear that the value
shouldn't be used as is.

--- a/Gir.toml
+++ b/Gir.toml
@@ -286,6 +286,14 @@ status = "generate"
 name = "Gdk.FrameTimings"
 status = "generate"
 version = "3.8"
+    [[object.function]]
+    name = "get_predicted_presentation_time"
+    # Use an `Option` for the return value
+    ignore = true
+    [[object.function]]
+    name = "get_presentation_time"
+    # Use an `Option` for the return value
+    ignore = true
 
 [[object]]
 name = "Gdk.Monitor"
