--- a/Gir.toml
+++ b/Gir.toml
@@ -15,6 +15,8 @@ generate = [
     "GLib.FormatSizeFlags",
     "GLib.KeyFileError",
     "GLib.KeyFileFlags",
+    "GLib.OptionArg",
+    "GLib.OptionFlags",
     "GLib.SeekType",
     "GLib.Time",
     "GLib.TimeType",
