--- a/Gir.toml
+++ b/Gir.toml
@@ -128,6 +128,8 @@ manual = [
     "GLib.IOCondition",
     "GLib.KeyFile",
     "GLib.MainContext",
+    "GLib.OptionArg",
+    "GLib.OptionFlags",
     "GLib.Priority",
     "GLib.SeekType",
     "GLib.Source",
