--- a/Gir.toml
+++ b/Gir.toml
@@ -2,7 +2,7 @@
 girs_dir = "gir-files"
 library = "Atk"
 version = "1.0"
-min_cfg_version = "1.0"
+min_cfg_version = "2.0"
 target_path = "."
 work_mode = "normal"
 generate_safety_asserts = true
@@ -11,34 +11,67 @@ single_version_file = true
 
 generate = [
     "Atk.Action",
-    # "Atk.Attribute",
-    # "Atk.AttributeSet",
     "Atk.Component",
+    "Atk.CoordType",
     "Atk.Document",
+    "Atk.EventListener",
+    "Atk.EventListenerInit",
+    "Atk.FocusHandler",
+    "Atk.GObjectAccessible",
+    "Atk.Hyperlink",
+    "Atk.HyperlinkImpl",
+    "Atk.HyperlinkStateFlags",
     "Atk.Hypertext",
     "Atk.Image",
+    # "Atk.Implementor",
+    # "Atk.KeyEventStruct",
     "Atk.Layer",
     "Atk.Misc",
+    # "Atk.NoOpObject",
+    "Atk.NoOpObjectFactory",
+    "Atk.ObjectFactory",
+    "Atk.Plug",
+    "Atk.PropertyChangeHandler",
+    # "Atk.PropertyValues",
     "Atk.Range",
     "Atk.Rectangle",
     "Atk.Registry",
+    "Atk.Relation",
+    "Atk.RelationType",
+    "Atk.RelationSet",
     "Atk.Role",
+    "Atk.Selection",
+    "Atk.Socket",
     "Atk.State",
-    "Atk.Table",
+    "Atk.StateType",
+    "Atk.StateSet",
+    "Atk.StreamableContent",
     "Atk.TableCell",
     "Atk.Text",
+    "Atk.TextAttribute",
+    "Atk.TextBoundary",
+    "Atk.TextClipType",
+    "Atk.TextGranularity",
+    "Atk.TextRange",
+    "Atk.Util",
+    "Atk.Value",
+    "Atk.ValueType",
+    "Atk.Window",
 ]
 
 ignore = [
-    "Atk.Relation",
-    "Atk.Plug", # conflicting implementations of trait `glib::IsA<glib::Object>` for type `auto::plug::Plug`
-    "Atk.Window", # conflicting implementations of trait `glib::translate::ToGlibPtr<'_, *mut gobject_ffi::GObject>` for type `auto::window::Window`
 ]
 
 manual = [
+    "Atk.Attribute",
+    "Atk.AttributeSet",
+    "Atk.TextRectangle",
     # "GLib.SList",
+    # "GLib.IOChannel",
+    "GObject.Object",
+    "GObject.Value",
+    "GObject.ValueArray",
 ]
-
 
 [[object]]
 name = "Atk.EditableText"
@@ -49,20 +82,23 @@ status = "generate"
     ignore = true
 
 [[object]]
-name = "Atk.Hyperlink"
-status = "generate"
-    [[object.function]]
-    name = "get_object"
-    ignore = true
-
-[[object]]
-name = "Atk.Selection"
-status = "generate"
-    [[object.function]]
-    name = "ref_selection" # Object instead of AtkObject
-    ignore = true
-
-[[object]]
 name = "Atk.Object"
 status = "generate"
 trait_name = "AtkObjectExt"
+
+[[object]]
+name = "Atk.Table"
+status = "generate"
+    [[object.function]]
+    name = "get_selected_columns"
+    ignore = true
+    [[object.function]]
+    name = "get_selected_rows"
+    ignore = true
+
+[[object]]
+name = "Atk.Text"
+status = "generate"
+    [[object.function]]
+    name = "free_ranges"
+    ignore = true # don't know yet how to give back memory...
