--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ travis-ci = { repository = "gtk-rs/atk" }
 name = "atk"
 
 [features]
+purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 dox = ["atk-sys/dox"]
 v2_7_90 = ["atk-sys/v2_7_90"]
