cairo: Add support for SVG, PS and PDF surfaces

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ name = "cairo"
 [features]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 png = ["cairo-sys-rs/png"]
+pdf = ["cairo-sys-rs/pdf"]
+svg = ["cairo-sys-rs/svg"]
+ps = ["cairo-sys-rs/ps"]
 use_glib = ["glib", "glib-sys", "gobject-sys", "cairo-sys-rs/use_glib"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 v1_12 = ["cairo-sys-rs/v1_12"]
