--- a/cairo-sys-rs/Cargo.toml
+++ b/cairo-sys-rs/Cargo.toml
@@ -19,6 +19,9 @@ v1_12 = []
 v1_14 = ["v1_12"]
 xlib = ["x11"]
 png = []
+pdf = []
+svg = []
+ps = []
 xcb = []
 use_glib = ["glib-sys", "gobject-sys", "glib"]
 
