--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,4 +44,5 @@ v2_52 = ["v2_50", "glib-sys/v2_52"]
 v2_54 = ["v2_52", "glib-sys/v2_54", "gobject-sys/v2_54"]
 v2_56 = ["v2_54", "glib-sys/v2_56"]
 futures = ["futures-preview", "v2_36"]
+subclassing = []
 dox = ["glib-sys/dox", "gobject-sys/dox"]
