--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ v2_50 = ["v2_48", "glib-sys/v2_50"]
 v2_52 = ["v2_50", "glib-sys/v2_52"]
 v2_54 = ["v2_52", "glib-sys/v2_54", "gobject-sys/v2_54"]
 v2_56 = ["v2_54", "glib-sys/v2_56"]
+v2_58 = ["v2_56", "glib-sys/v2_58"]
 futures = ["futures-preview", "v2_36"]
 subclassing = []
 dox = ["glib-sys/dox", "gobject-sys/dox"]
