--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ travis-ci = { repository = "gtk-rs/glib" }
 name = "glib"
 
 [dependencies]
-lazy_static = "1.0"
+lazy_static = "1.2"
 libc = "0.2"
 bitflags = "1.0"
 futures-preview = { version = "0.2", optional = true }
@@ -29,7 +29,7 @@ glib-sys = { git = "https://github.com/gtk-rs/sys" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 
 [dev-dependencies]
-tempdir = "0.3"
+tempfile = "3"
 
 [features]
 v2_34 = ["glib-sys/v2_34", "gobject-sys/v2_34"]
