--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,6 +117,11 @@ name = "overlay"
 name = "pango_attributes"
 
 [[bin]]
+name = "progress_tracker"
+path = "src/bin/progress_tracker.rs"
+required-features = ["gtk/v3_10"]
+
+[[bin]]
 name = "simple_treeview"
 
 [[bin]]
