gio: Mark SubprocessLauncher::send_signal() as Windows-only

--- a/Gir.toml
+++ b/Gir.toml
@@ -636,6 +636,9 @@ status = "generate"
     [[object.function]]
     name = "communicate_utf8_async"
     ignore = true
+    [[object.function]]
+    name = "send_signal"
+    cfg_condition = "not(windows)"
 
 [[object]]
 name = "Gio.SubprocessLauncher"
