gdk: Define manual traits and fix gdk_cursor_new_from_name

--- a/Gir.toml
+++ b/Gir.toml
@@ -356,6 +356,7 @@ status = "generate"
 [[object]]
 name = "Gdk.Window"
 status = "generate"
+manual_traits = ["WindowExtManual"]
     [[object.function]]
     name = "new"
     ignore = true
