--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ v2_48 = ["v2_46", "gio-sys/v2_48", "glib/v2_48"]
 v2_50 = ["v2_48", "gio-sys/v2_50", "glib/v2_50"]
 v2_52 = ["v2_50", "gio-sys/v2_52", "glib/v2_52"]
 v2_54 = ["v2_52", "gio-sys/v2_54", "glib/v2_54"]
-v2_56 = ["v2_54", "gio-sys/v2_56"]
+v2_56 = ["v2_54", "gio-sys/v2_56", "glib/v2_56"]
+v2_58 = ["v2_56", "gio-sys/v2_58", "glib/v2_58"]
 dox = ["gio-sys/dox", "glib/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
