--- a/Gir_GObject.toml
+++ b/Gir_GObject.toml
@@ -2,11 +2,12 @@
 girs_dir = "gir-files"
 library = "GObject"
 version = "2.0"
-min_cfg_version = "2.32"
+min_cfg_version = "2.42"
 target_path = "."
 auto_path = "src/gobject/auto"
 work_mode = "normal"
 single_version_file = true
+deprecate_by_min_version = true
 
 generate = [
     "GObject.BindingFlags",
