--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,14 +26,7 @@ name = "atk"
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
 dox = ["atk-sys/dox"]
-v2_7_90 = ["atk-sys/v2_7_90"]
-v2_8 = ["atk-sys/v2_8", "v2_7_90"]
-v2_9_3 = ["atk-sys/v2_9_3", "v2_8"]
-v2_9_4 = ["atk-sys/v2_9_4", "v2_9_3"]
-v2_10 = ["atk-sys/v2_10", "v2_9_4"]
-v2_12 = ["atk-sys/v2_12", "v2_10"]
-v2_14 = ["atk-sys/v2_14", "v2_12"]
-v2_30 = ["atk-sys/v2_30", "v2_14"]
+v2_30 = ["atk-sys/v2_30"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 version = "0.1.3"
@@ -43,7 +36,7 @@ git = "https://github.com/gtk-rs/lgpl-docs"
 [dependencies]
 libc = "0.2"
 bitflags = "1.0"
-atk-sys = { git = "https://github.com/gtk-rs/sys" }
+atk-sys = { git = "https://github.com/gtk-rs/sys"}
 glib-sys = { git = "https://github.com/gtk-rs/sys" }
 gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 glib = { git = "https://github.com/gtk-rs/glib" }
