--- a/Gir.toml
+++ b/Gir.toml
@@ -2,10 +2,11 @@
 girs_dir = "gir-files"
 library = "GdkPixbuf"
 version = "2.0"
-min_cfg_version = "2.26"
+min_cfg_version = "2.30"
 target_path = "."
 work_mode = "normal"
 single_version_file = true
+deprecate_by_min_version = true
 
 generate = [
     "GdkPixbuf.Colorspace",
