pangocairo: Update to 1.36 as minimum pango version
https://github.com/gtk-rs/glib/issues/436

--- a/Gir.toml
+++ b/Gir.toml
@@ -5,8 +5,9 @@ version = "1.0"
 target_path = "."
 work_mode = "normal"
 generate_safety_asserts = false
-min_cfg_version = "1.30"
+min_cfg_version = "1.36"
 single_version_file = true
+deprecate_by_min_version = true
 
 generate = [
     "PangoCairo.Font",
