--- a/Gir.toml
+++ b/Gir.toml
@@ -2,11 +2,12 @@
 girs_dir = "gir-files"
 library = "Gdk"
 version = "3.0"
-min_cfg_version = "3.4"
+min_cfg_version = "3.14"
 target_path = "."
 work_mode = "normal"
 generate_safety_asserts = true
 single_version_file = true
+deprecate_by_min_version = true
 
 generate = [
     "Gdk.AnchorHints",
