--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ lazy_static = "1.2"
 libc = "0.2"
 bitflags = "1.0"
 futures-preview = { version = "0.2", optional = true }
-glib-sys = { git = "https://github.com/gtk-rs/sys", features = ["v2_40"] }
-gobject-sys = { git = "https://github.com/gtk-rs/sys", features = ["v2_42"] }
+glib-sys = { git = "https://github.com/gtk-rs/sys" }
+gobject-sys = { git = "https://github.com/gtk-rs/sys" }
 
 [dev-dependencies]
 tempfile = "3"
