glib: Add support for creating signals with class handler and providing the signal flags
This also makes add_action_signal() not needed anymore.

--- a/Gir_GObject.toml
+++ b/Gir_GObject.toml
@@ -12,6 +12,7 @@ deprecate_by_min_version = true
 generate = [
     "GObject.BindingFlags",
     "GObject.ParamFlags",
+    "GObject.SignalFlags",
 ]
 
 ignore = [
