--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,49 @@
+dist: xenial
 language: rust
 matrix:
   include:
     - os: linux
       rust: nightly
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=subclassing
     - os: linux
       rust: nightly
-      env: GTK=3.22.30
+      env: GTK=3.24 FEATURES=subclassing,v2_58
     - os: linux
       rust: beta
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=subclassing
     - os: linux
       rust: beta
-      env: GTK=3.22.30
+      env: GTK=3.24 FEATURES=subclassing,v2_58
     - os: linux
       rust: 1.31.0
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=subclassing
     - os: linux
       rust: 1.31.0
-      env: GTK=3.22.30
+      env: GTK=3.24 FEATURES=subclassing,v2_58
     - os: osx
       rust: nightly
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=subclassing
     # - os: osx
     #   rust: nightly
-    #   env: GTK=3.22.30
+    #   env: GTK=3.24 FEATURES=subclassing,v2_58
     - os: osx
       rust: beta
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=subclassing
     # - os: osx
     #   rust: beta
-    #   env: GTK=3.22.30
+    #   env: GTK=3.24 FEATURES=subclassing,v2_58
     - os: osx
       rust: stable
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=subclassing
     # - os: osx
     #   rust: stable
-    #   env: GTK=3.22.30
+    #   env: GTK=3.24 FEATURES=subclassing,v2_58
     - os: linux
       rust: nightly
-      env: GTK=3.4 ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
+      env: GTK=3.14 FEATURES=subclassing ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
     - os: linux
       rust: nightly
-      env: GTK=3.22.30 ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
-sudo: true
+      env: GTK=3.24 FEATURES=subclassing,v2_58 ARM=1 OTHER_TARGET="--target armv7-unknown-linux-gnueabihf"
 addons:
   apt:
     packages:
@@ -54,20 +54,17 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/opt/X11/lib/pkgconfig; fi
   - if [[ "$ARM" == "1" ]]; then rustup target add armv7-unknown-linux-gnueabihf; fi
 script:
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.4" ] && ! [ "$ARM" == "1" ]; then
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ] && ! [ "$ARM" == "1" ]; then
     make regen_check;
     fi
   - if ! [ "$ARM" == "1" ]; then
     cargo doc --features "dox";
     fi
   - if ! [ "$ARM" == "1" ]; then
-    cargo test --features "subclassing";
+    cargo test --features "$FEATURES";
     fi
   - if [ "$ARM" == "1" ]; then
-    PKG_CONFIG_ALLOW_CROSS=1 cargo build $OTHER_TARGET;
-    fi
-  - if [ "$ARM" == "1" ]; then
-    PKG_CONFIG_ALLOW_CROSS=1 cargo build --features subclassing $OTHER_TARGET;
+    PKG_CONFIG_ALLOW_CROSS=1 cargo build --features "$FEATURES" $OTHER_TARGET;
     fi
   - rustc --version
   - mkdir .cargo
