--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,43 @@
+dist: xenial
 language: rust
 matrix:
   include:
     - os: linux
       rust: nightly
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=
     - os: linux
       rust: nightly
-      env: GTK=3.22.30
+      env: GTK=3.24 FEATURES=
     - os: linux
       rust: beta
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=
     - os: linux
       rust: beta
-      env: GTK=3.22.30
+      env: GTK=3.24 FEATURES=
     - os: linux
       rust: 1.31.0 # to check gstreamer compatibility
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=
     - os: linux
       rust: 1.31.0 # to check gstreamer compatibility
-      env: GTK=3.22.30
+      env: GTK=3.24 FEATURES=
     - os: osx
       rust: nightly
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: nightly
-    #   env: GTK=3.22.30
+    #   env: GTK=3.24 FEATURES=
     - os: osx
       rust: beta
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: beta
-    #   env: GTK=3.22.30
+    #   env: GTK=3.24 FEATURES=
     - os: osx
       rust: stable
-      env: GTK=3.4
+      env: GTK=3.14 FEATURES=
     # - os: osx
     #   rust: stable
-    #   env: GTK=3.22.30
+    #   env: GTK=3.24 FEATURES=
 addons:
   apt:
     packages:
@@ -49,20 +50,12 @@ before_install:
     fi
 script:
   - rustc --version
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.4" ]; then
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.14" ]; then
     make regen_check;
     fi
-  - ./check_init_asserts
-  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ] && [ "$GTK" == "3.4" ]; then
-    rustup component add clippy-preview;
-    cargo clippy;
-    fi
-  - cargo build --features v2_10
-  - cargo test --features embed-lgpl-docs --jobs 1
   - cargo doc --features "dox"
-  # catch any sneaked in lgpl docs
-  - cargo build --features purge-lgpl-docs --jobs 1
-  - git diff -R --exit-code
+  - cargo test --features "$FEATURES"
+  - rustc --version
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
   - git clone -q --depth 50 -b pending https://github.com/gtk-rs/examples _examples
