--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,11 +17,13 @@ install:
 
 build_script:
   - cargo doc --features "dox"
+  - cargo test
+  - cargo test --features v2_36_8
   - mkdir .cargo
   - echo paths = ["."] > .cargo\config
   - git clone -q --depth 50 -b pending https://github.com/gtk-rs/examples _examples
   - cd _examples
   - cargo build
-  - cargo build --features gtk_3_18
+  - cargo build --features gtk_3_24
 
 test: false
